<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">heddy_mvp</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
<string name="msg_complete_the_2">Complete the 2 min questionnaire so you can get the tailored Heddy experience!</string>
<string name="lbl_back">Back</string>
<string name="msg_you_can_change">You can change those anytime by selecting or deselecting from the options underneath</string>
<string name="msg_select_any_topi">Select any topics you might struggle with</string>
<string name="lbl2">+</string>
<string name="msg_where_is_your_a">Where is your acne located?</string>
<string name="lbl_face">Face</string>
<string name="lbl_neck">Neck</string>
<string name="lbl_body_image">Body Image</string>
<string name="lbl_acne">Acne</string>
<string name="lbl_soon">Coming Soon</string>
<string name="msg_enter_your_gend">Enter your gender identity</string>
<string name="msg_my_acne_is_link">My acne is linked to my hormonal fluctuations</string>
<string name="msg_enter_your_pass">Enter your password</string>
<string name="msg_what_do_you_ide">What do you identify as?*</string>
<string name="msg_based_on_the_in">Based on the information provided, select all those that apply</string>
<string name="msg_video_on_what_i">Video on what is acne 

Where is comes from \u2028Types of acne </string>
<string name="msg_based_on_your_a">Based on your answers we think you might be interested in understanding the hormonal factors that come into the topic of acne </string>
<string name="msg_register_with_a">Register with apple</string>
<string name="msg_no_i_would_pre">No, I would prefer to wander on my own</string>
<string name="msg_select_all_the">Select all the reasons why
you think you have Hormonal Acne</string>
<string name="lbl_nodules">Nodules</string>
<string name="lbl_heddy">Heddy.</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_heddy2">Heddy</string>
<string name="msg_register_with_g">Register with google</string>
<string name="msg_enter_your_coun">Enter your country of residence</string>
<string name="msg_lets_get_to_kno">Lets get to know each other!</string>
<string name="lbl_papules"> Papules</string>
<string name="lbl_profile">Profile</string>
<string name="lbl">.</string>
<string name="msg_yes_take_me_th">Yes, take me there!</string>
<string name="lbl_interests">Interests</string>
<string name="lbl_hormonal_acne">Hormonal Acne</string>
<string name="msg_what_kind_of_ac">What kind of acne do you have?</string>
<string name="msg_my_breakouts_ar">My breakouts are continually recurring in the same area</string>
<string name="msg_might_be_intere">might be interested</string>
<string name="msg_lifestyle_facto">Lifestyle factors</string>
<string name="lbl_confidence">Confidence</string>
<string name="msg_my_acne_is_usua">My acne is usually on the lower part of my face</string>
<string name="msg_based_on_your_a2">Based on your answers we think you </string>
<string name="lbl_cysts">Cysts</string>
<string name="msg_don_t_have_acco">Don\u2019t have account? Sign up</string>
<string name="lbl_your_journey">Your Journey</string>
<string name="lbl_your_interests">Your Interests </string>
<string name="lbl_action_steps">Action Steps</string>
<string name="msg_what_do_you_thi">What do you think is your 
acne type?</string>
<string name="lbl_other2"> Other</string>
<string name="lbl_mental_health">Mental Health</string>
<string name="lbl_fungal_acne">Fungal Acne</string>
<string name="msg_hormonal_factor2">hormonal factors</string>
<string name="lbl_bloating"> Bloating</string>
<string name="lbl_whiteheads">Whiteheads</string>
<string name="msg_enter_your_phon">Enter your phone</string>
<string name="lbl_prevention">Prevention</string>
<string name="msg_psychological_i">Psychological Impact</string>
<string name="msg_when_in_doubt">When in doubt, replay the video!</string>
<string name="lbl_coming_soon">Coming Soon!</string>
<string name="msg_hormonal_factor">Hormonal factors</string>
<string name="lbl_acne2">acne</string>
<string name="lbl_motivation">Motivation</string>
<string name="lbl_other">Other</string>
<string name="lbl_cistic_acne">Cistic Acne</string>
<string name="lbl_pustules"> Pustules</string>
<string name="msg_don_t_have_acco2">Don\u2019t have account? </string>
<string name="msg_tell_us_more_ab">Tell us more about you</string>
<string name="lbl_nodular_acne">Nodular Acne</string>
<string name="lbl_achievements">Achievements</string>
<string name="msg_enter_your_birt">Enter your birthday</string>
<string name="lbl_or">or</string>
<string name="msg_different_kinds">Different kinds\u2028\u2028How to categorise Acne</string>
<string name="msg_in_understandin"> in understanding the </string>
<string name="msg_by_signing_up_y">By signing up you\u2019re agreeing to our terms and conditions</string>
<string name="msg_where_are_you_f">Where are you from?* </string>
<string name="msg_that_come_into"> that come into the topic of </string>
<string name="lbl_enter_your_name">Enter your name</string>
<string name="lbl_blackheads">Blackheads</string>
<string name="lbl_introduction">Introduction</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
