<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="acneTwoVM" type="com.heddymvp.app.modules.acnetwo.data.viewmodel.AcneTwoVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAcneTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnheddy"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtHeddy"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{acneTwoVM.acneTwoModel.txtHeddy}"
                style="@style/txtFredokasemibold30" tools:text="@string/lbl_heddy"/>
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_width="@dimen/_6pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_900"/>
                <ProgressBar android:id="@+id/progressBarGroup203"
                    android:indeterminate="false"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_weight="0.98"
                    android:layout_width="0dp" android:max="100"
                    android:minHeight="@dimen/_10pxv"
                    android:progress="50"
                    android:progressDrawable="@drawable/layer_list_bg_bluegray_101_radius_5" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
            </LinearLayout>
            <TextView android:id="@+id/txtWhatkindofac"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:text="@{acneTwoVM.acneTwoModel.txtWhatkindofac}"
                style="@style/txtIntersemibold24" tools:text="@string/msg_what_kind_of_ac"/>
            <TextView android:id="@+id/txtBasedonthein"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:text="@{acneTwoVM.acneTwoModel.txtBasedonthein}"
                style="@style/txtRobotoromanregular17_1" tools:text="@string/msg_based_on_the_in"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnBlackheads"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_blackheads"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_blackheads"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnWhiteheads"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_whiteheads"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_whiteheads"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnPapules"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_papules"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_papules"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnPustules"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_pustules"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_pustules"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNodules"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_nodules"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_nodules"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCysts"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_cysts"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_cysts"/>
            <TextView android:id="@+id/txtWhenindoubt"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_129pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:text="@{acneTwoVM.acneTwoModel.txtWhenindoubt}"
                style="@style/txtInterlight10" tools:text="@string/msg_when_in_doubt"/>
            <LinearLayout android:id="@+id/linearRowframe389"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageFrame389"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_frame389"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_frame389"/>
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_marginStart="@dimen/_213pxh"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright_blue_a400_62x62"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright_blue_a400_62x62"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
