<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="acneSixVM" type="com.heddymvp.app.modules.acnesix.data.viewmodel.AcneSixVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAcneSix"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnheddy"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtHeddy"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{acneSixVM.acneSixModel.txtHeddy}"
                style="@style/txtFredokasemibold30" tools:text="@string/lbl_heddy"/>
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_width="@dimen/_6pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_900"/>
                <ProgressBar android:id="@+id/progressBarGroup212"
                    android:indeterminate="false"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_weight="0.98"
                    android:layout_width="0dp" android:max="100"
                    android:minHeight="@dimen/_10pxv"
                    android:progress="71"
                    android:progressDrawable="@drawable/layer_list_bg_bluegray_101_radius_5" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
            </LinearLayout>
            <TextView android:id="@+id/txtSelectallthe"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:text="@{acneSixVM.acneSixModel.txtSelectallthe}"
                style="@style/txtIntersemibold24" tools:text="@string/msg_select_all_the"/>
            <TextView android:id="@+id/txtBasedonthein"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:text="@{acneSixVM.acneSixModel.txtBasedonthein}"
                style="@style/txtRobotoromanregular17_1" tools:text="@string/msg_based_on_the_in"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnMyBreakoutsAreContinuallyRecurringInTheSameArea"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:textSize="@dimen/_12pxh"
                android:text="@string/msg_my_breakouts_ar"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/msg_my_breakouts_ar"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMyAcneIsUsuallyOnTheLowerPartOfMyFace"
                style="@style/btnSolidRounded_1"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_6pxv"
                android:paddingEnd="@dimen/_8pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/msg_my_acne_is_usua"
                android:textAllCaps="false"
                android:textSize="@dimen/_12pxh"
                tools:text="@string/msg_my_acne_is_usua" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMyAcneIsLinkedToMyHormonalFluctuations"
                style="@style/btnSolidRounded_1"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_6pxv"
                android:paddingEnd="@dimen/_9pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/msg_my_acne_is_link"
                android:textAllCaps="false"
                android:textSize="@dimen/_12pxh"
                tools:text="@string/msg_my_acne_is_link" />
            <TextView android:id="@+id/txtWhenindoubt"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_100pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:text="@{acneSixVM.acneSixModel.txtWhenindoubt}"
                style="@style/txtInterlight10" tools:text="@string/msg_when_in_doubt"/>
            <LinearLayout android:id="@+id/linearRowframe389"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageFrame389"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_frame389"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_frame389"/>
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_marginStart="@dimen/_213pxh"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright_blue_a400_62x62"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright_blue_a400_62x62"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
