<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="acneFiveVM" type="com.heddymvp.app.modules.acnefive.data.viewmodel.AcneFiveVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAcneFive"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnheddy"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtHeddy"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{acneFiveVM.acneFiveModel.txtHeddy}"
                style="@style/txtFredokasemibold30" tools:text="@string/lbl_heddy"/>
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_width="@dimen/_6pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_900"/>
                <ProgressBar android:id="@+id/progressBarGroup213"
                    android:indeterminate="false"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_weight="0.98"
                    android:layout_width="0dp" android:max="100"
                    android:minHeight="@dimen/_10pxv"
                    android:progress="35"
                    android:progressDrawable="@drawable/layer_list_bg_bluegray_101_radius_5" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
            </LinearLayout>
            <TextView android:id="@+id/txtWhatdoyouthi"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:text="@{acneFiveVM.acneFiveModel.txtWhatdoyouthi}"
                style="@style/txtIntersemibold24" tools:text="@string/msg_what_do_you_thi"/>
            <TextView android:id="@+id/txtBasedonthein"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:text="@{acneFiveVM.acneFiveModel.txtBasedonthein}"
                style="@style/txtRobotoromanregular17_1" tools:text="@string/msg_based_on_the_in"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnFungalAcne"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_28pxh"
                android:paddingStart="@dimen/_28pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_fungal_acne"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_fungal_acne"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCisticAcne"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_cistic_acne"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_cistic_acne"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnHormonalAcne"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_18pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_hormonal_acne"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_hormonal_acne"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNodularAcne"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="@dimen/_136pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_24pxh"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_nodular_acne"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_nodular_acne"/>
            <LinearLayout android:id="@+id/linearRowframe389"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_280pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageFrame389"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_frame389"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_frame389"/>
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_marginStart="@dimen/_213pxh"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright_blue_a400_62x62"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright_blue_a400_62x62"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
